# iou_bot

./: .env.dev  .env.prod  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  requirements.txt
.docker/: Dockerfile  build.sh
.github/workflows/: build-and-test.yml
app/: main.py  models.py  parse_exceptions.py
tests/: test_models.py
