[tool.poetry]
name = "iou-bot"
version = "0.1.0"
description = "Telegram bot for IOU app"
authors = ["Skyler Carlson <skylercarlson28@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-telegram-bot = "^20.7"
requests = "^2.32.3"
pydantic = "^2.5.3"
pre-commit = "^3.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
